--- a/Models/FlowMatching/2025.09.11_DiFlow-TTS.md
+++ b/Models/FlowMatching/2025.09.11_DiFlow-TTS.md
@@ -556,7 +556,7 @@ Future work includes enabling multilingual and emotional synthesis and integrati
 
 ## 参考文献
 
-[^Zhang2023VALL-EX]: [**VALL-E X**: Speak Foreign Languages with Your Own Voice: Cross-Lingual Neural Codec Language Modeling](../SpeechLM/ST2S/2023.03.07_VALL-E_X.md). ArXiv:2303.03926.
+[^Zhang2023VALL-EX]: [**VALL-E X**: Speak Foreign Languages with Your Own Voice: Cross-Lingual Neural Codec Language Modeling](../SpeechLM_TTS/2023.03.07_VALL-E_X.md). ArXiv:2303.03926.
 [^Han2024VALL-ER]: [**VALL-E R**: Robust and Efficient Zero-Shot Text-to-Speech Synthesis via Monotonic Alignment](../SpeechLM_TTS/2024.06.12_VALL-E_R.md). ArXiv:2406.07855.
 [^Meng2024MELLE]: [**MELLE**: Autoregressive Speech Synthesis without Vector Quantization](../SpeechLM_TTS/2024.07.11_MELLE.md). ArXiv:2407.08551v2.
 [^Song2024ELLA-V]: [**ELLA-V**: Stable Neural Codec Language Modeling with Alignment-Guided Sequence Reordering](../SpeechLM_TTS/2024.01.14_ELLA-V.md). ArXiv:2401.07333v1.
@@ -564,7 +564,7 @@ Future work includes enabling multilingual and emotional synthesis and integrati
 [^Peng2024VoiceCraft]: [**VoiceCraft**: Zero-Shot Speech Editing and Text-to-Speech in the Wild](../SpeechLM_TTS/2024.03.25_VoiceCraft.md). ArXiv:2403.16973v3/ACL2024.
 [^Ji2024MobileSpeech]: [**MobileSpeech**: A Fast and High-Fidelity Framework for Mobile Zero-Shot Text-to-Speech](../SpeechLM/2024.02.14_MobileSpeech.md). ArXiv:2402.09378v2/ACL2024.
 [^Wang2025Spark-TTS]: [**Spark-TTS**: An Efficient LLM-Based Text-to-Speech Model with Single-Stream Decoupled Speech Tokens](../SpeechLM_TTS/2025.03.03_Spark-TTS.md). ArXiv:2503.01710v1.
-[^Wang2023VALL-E]: [**VALL-E**: Neural Codec Language Models are Zero-Shot Text to Speech Synthesizers](../SpeechLM/ST2S/2023.01.05_VALL-E.md). ArXiv:2301.02111/TASLP2025.
+[^Wang2023VALL-E]: [**VALL-E**: Neural Codec Language Models are Zero-Shot Text to Speech Synthesizers](../SpeechLM_TTS/2023.01.05_VALL-E.md). ArXiv:2301.02111/TASLP2025.
 [^Kang2023ZET-Speech]: [**ZET-Speech**: Zero-Shot Adaptive Emotion-Controllable Text-to-Speech Synthesis with Diffusion and Style-based Models](../Diffusion/2023.05.23_ZET-Speech.md). ArXiv:2305.13831v1/InterSpeech2023.
 [^Shen2024NaturalSpeech2]: [**NaturalSpeech2**: Latent Diffusion Models are Natural and Zero-Shot Speech and Singing Synthesizers](../Diffusion/2023.04.18_NaturalSpeech2.md). ArXiv:2304.09116v3/ICLR2024.
 [^Ju2024NaturalSpeech3]: [**NaturalSpeech3/FACodec**: Zero-Shot Speech Synthesis with Factorized Codec and Diffusion Models](../Diffusion/2024.03.05_NaturalSpeech3.md). ArXiv:2403.03100v3/ICML2024.
