--- a/Models/FlowMatching/2025.09.11_DiFlow-TTS.md
+++ b/Models/FlowMatching/2025.09.11_DiFlow-TTS.md
@@ -121,3 +121,35 @@ This architecture enables the model to explicitly learn aspect-specific distribu
 -  Experimental results demonstrate that DiFlow-TTS is both compact and efficient in model size, surpassing several strong zero-shot TTS baselines in terms of naturalness, prosody, energy control, and speaker style preservation.
 
 It also maintains a compact model size and achieves low-latency inference, generating speech up to 25.8 times faster than strong baselines.
+
+## 2·Related Work
+
+A growing trend in speech synthesis focuses on converting raw waveforms into discrete token representations using vector-quantized variational autoencoders (VQ-VAE), which was first introduced by [^Oord2017Neural] in the field of computer vision and later adapted to speech synthesis.
+
+These tokenized representations have demonstrated greater naturalness and robustness compared to conventional mel-spectrogram-based approaches.
+
+To effectively model sequences of discrete speech tokens, recent efforts have adapted large language models (LLMs) from the natural language processing (NLP) domain [^Zhang2023Speak], [^Chen2024Vall-E], [^Han2024Vall-E], [^Du2024Cosyvoice], [^Peng2024V}oice{C}raft], [^Meng2025Autoregressive], [^Chen2025Neural], [^Wang2025Spark-TTS].
+
+A notable example is VALL-E [^Chen2025Neural], which leverages a pre-trained neural codec to encode speech into discrete codec tokens and reformulates zero-shot TTS as a conditional codec language modeling task.
+
+During inference, it performs autoregressive (AR) continuation from the acoustic tokens of a short speech prompt, enabling high-fidelity speaker-consistent voice synthesis.
+
+Although autoregressive models achieve impressive quality, they are inherently limited by slow inference speeds.
+
+This limitation has prompted a shift toward non-autoregressive (NAR) paradigms [^Shen2024NaturalSpeech], [^Ju2024N}atural{S}peech], [^Du2024UniCATS], [^Lee2025Di{TT}o-{Tts], [^Jia2025Di{TAR].
+
+For example, NaturalSpeech 2 [^Shen2024NaturalSpeech] uses diffusion [^Ho2020Denoising], [^Song2021Score-Based] to generate discrete acoustic tokens as continuous features, and NaturalSpeech 3 [^Ju2024N}atural{S}peech] further factorizes speech into subspaces of content, prosody, and acoustic details, employing multiple diffusion models to independently capture various acoustic characteristics.
+
+In parallel, flow matching [^Lipman2023Flow], [^Liu2023Flow] has gained attention as a promising generative technique, producing strong results in various domains.
+
+However, most existing speech-related flow matching applications operate in a continuous space [^Mehta2024Matcha-TTS], [^Guan2024Reflow-TTS], [^Yao2025Stablevc], [^Zuo2025Rhythm], [^Zuo2025Enhancing], [^Hieu2025OZS}peech], requiring either a pure mel-spectrogram or discrete tokens to be embedded into continuous representations prior to generation.
+
+This leads to increased computational overhead and latency during inference, which diminishes the efficiency benefits of flow-based approaches.
+
+An emerging line of research seeks to extend iterative refinement techniques to discrete spaces by modeling generation dynamics using Markov chains.
+
+Discrete-space generative models have already proven effective in domains such as natural language [^Lou2024Discrete], [^Shi2024Simplified], [^Sahoo2024Simple], proteins [^Campbell2024Generative], [^Yi2025All-Atom], vision [^Austin2021Structured], [^Chang2022MaskGIT], [^Shi2024Simplified], [^Fuest2025Maskflow], code [^Gat2024Discrete], and even graphs [^Qin2025DeFoG].
+
+Although discrete diffusion models have recently been applied to speech synthesis [^Ye2025Emotional], [^Ye2025Shushing!], the use of discrete flow matching [^Gat2024Discrete] to model speech tokens remains largely unexplored, particularly in zero-shot TTS scenarios.
+
+In this work, we propose a DFM framework tailored for zero-shot TTS, aiming to harness the efficiency of discrete modeling without compromising quality.
