--- a/Models/FlowMatching/2025.09.11_DiFlow-TTS.md
+++ b/Models/FlowMatching/2025.09.11_DiFlow-TTS.md
@@ -153,3 +153,261 @@ Discrete-space generative models have already proven effective in domains such a
 Although discrete diffusion models have recently been applied to speech synthesis [^Ye2025Emotional], [^Ye2025Shushing!], the use of discrete flow matching [^Gat2024Discrete] to model speech tokens remains largely unexplored, particularly in zero-shot TTS scenarios.
 
 In this work, we propose a DFM framework tailored for zero-shot TTS, aiming to harness the efficiency of discrete modeling without compromising quality.
+
+## 3·Method
+
+Figure~[fig:components](#fig:components) illustrates the overall framework of DiFlow-TTS, which comprises three main modules: (a) *Speech Tokenization*, (b) *Phoneme-Content Mapper*, and (c) *Factorized Discrete Flow Denoiser*.
+
+In the following sections, we describe each module in detail.
+
+![](figures/components.pdf)
+
+<a id="fig:components">The detailed components of DiFlow TTS.
+
+The architecture consists of three main components: (a) *Speech Tokenization*, which extracts discrete tokens and a speaker embedding from a raw speech; (b) *Phoneme-Content Mapper*, which maps input phonemes to discrete content tokens and generates the corresponding content embeddings; and (c) *Factorized Discrete Flow Denoiser*, which performs discrete flow matching conditioned on the content embeddings, speaker embedding, and the discrete prosody and acoustic tokens derived from the reference speech prompt.</a>
+
+### Preliminaries
+
+#### Notions.
+
+We denote a sequence $x$ as an array of $L$ tokens $(x^1, x^2, \dots, x^L)$ belonging to a discrete space $\mathcal{D} = [v]^L$, where each token is selected from a vocabulary of size $v$, with $[v] = \{1, \dots, v\}$.
+
+We also define an extended space $\mathcal{D}' = [v]^{nL}$ as the concatenation of $n$ such sequences, each of length $L$.
+
+To express the distributions of the point mass in these sequences, we use the delta function $\delta_y(x) = \prod_{i=1}^N \delta_{y^i}(x^i)$, where $\delta_{y^i}(x^i) = 1$ if $x^i = y^i$, and $0$ otherwise.
+
+#### Discrete Flow Matching.
+
+In DFM models, the goal is to transform the source samples $\mathbf{x}_0 \sim p$ to the target samples $\mathbf{x}_1 \sim q$.
+
+We elaborate on the source and target distributions as well as the probability velocity in the following paragraphs.
+
+**Source Distribution**: Following [^Gat2024Discrete], we instantiate the source distribution $p$ to assign all probability mass to sequences in which every token is the mask token \verb|[MASK]|, that is, $p(x) = \delta_{\verb|[MASK]|}(x)$.
+
+This implies that the source distribution places all probability mass in the sequence where every token is the mask token \verb|[MASK]|.
+
+**Target Distribution**:
+In conventional DFM settings, the target sequence $\mathbf{x}_1$ is treated as a monolithic sequence.
+
+In contrast, we propose to factorize $\mathbf{x}_1$ into two structured components that are learned jointly.
+
+This formulation allows us to construct a probability velocity over a structured target space composed of two parts.
+
+To this end, we define the target distribution $q$ as follows:
+
+\begin{definition}
+
+Let $\mathbf{x}_1^{p} \sim q_p$ and $\mathbf{x}_1^{a} \sim q_a$ denote the random variables corresponding to the prosody and acoustic details sequences, respectively.
+
+These sequences are in spaces $[v]^{mL}$ and $[v]^{kL}$.
+
+The full target sequence is then defined as $\mathbf{x}_1 = \mathbf{x}_1^{p} \oplus \mathbf{x}_1^{a} \in [v]^{(m+k)L}$, where $\oplus$ denotes the concatenation of the sequence.
+
+Assuming the independence between the two components, the joint target distribution is factorized as $q(x) = q_p(x^p) \cdot q_a(x^a)$, where $x = x^p \oplus x^a$.
+\end{definition}
+
+**Probability Velocity**: We define a scheduler $\kappa_t \in [0,1]$, which is a monotonically increasing function with boundary conditions $\kappa_0 = 0$ and $\kappa_1 = 1$, where $t \in [0, 1]$ denotes the continuous time variable.
+
+Following [^Gat2024Discrete], we consider a conditional probability path known as the *mixture path*, which linearly interpolates between the source and target distributions:
+$p_t(\mathbf{x}^i | \mathbf{x}_0, \mathbf{x}_1) = (1 - \kappa_t)\delta_{\mathbf{x}_0}(\mathbf{x}^i) + \kappa_t\delta_{\mathbf{x}_1}(\mathbf{x}^i)$, where $p_t(\mathbf{x}|\mathbf{x}_0,\mathbf{x}_1) = \prod_{i=1}^N p_t(\mathbf{x}^i | \mathbf{x}_0,\mathbf{x}_1)$.
+
+This defines a time-dependent probability on the space of tokens $[v]$ conditioned on the pair $\mathbf{x}_0, \mathbf{x}_1$, where the probability mass gradually shifts from the source token to the target token as $\kappa_t$ increases.
+
+This *conditional probability path* is governed by the probability velocity $\mathbf{u}_t$, defined as:
+
+$$\label{eq:u_t_denoiser}
+\mathbf{u}^i_t(\mathbf{x}^i,\mathbf{x}_t) = \frac{\dot{\kappa}_t}{1-\kappa_t}\left[p_{1|t}(\mathbf{x}^i|\mathbf{x}_t, \mathbf{c}; \theta) - \delta_{\mathbf{x}_t}(\mathbf{x}^i)\right],
+$$
+
+where $\dot{\kappa}_t$ is the time derivative of the scheduler $\kappa_t$, and $\mathbf{c} = (\mathbf{r}, \mathbf{h}_c, \mathbf{s})$ denotes the set of conditioning variables, including reference speech prompt $\mathbf{r}$, content embedding $\mathbf{h}_c$, and speaker embedding $\mathbf{s}$.
+
+The term $p_{1|t}(\mathbf{x}^i|\mathbf{x}_t, \mathbf{c}; \theta)$ is modeled by a probability denoiser $f_{\theta}$ with learnable parameters $\theta$ and is defined as:
+
+$$
+p_{1|t}(\mathbf{x}^i|\mathbf{x}_t, \mathbf{c}; \theta) = \sum_{\mathbf{x}_0, \mathbf{x}_1} \delta_{\mathbf{x}_1}(\mathbf{x}^i) \, p_t(\mathbf{x}_0, \mathbf{x}_1|\mathbf{x}_t, \mathbf{c}; \theta),
+\label{eq:p1|t}
+$$
+
+where $p_t(\mathbf{x}_0, \mathbf{x}_1|\mathbf{x}_t, \mathbf{c}; \theta)$ is the posterior distribution $\mathbf{x}_1$ given a partially corrupted sequence $\mathbf{x}_t$ and condition $\mathbf{c}$.
+
+### Speech Tokenization
+
+The *Speech Tokenization* module converts a raw input speech waveform into discrete token sequences.
+
+In our framework, we employ FaCodec [^Ju2024N}atural{S}peech] as the speech tokenizer and speaker embedding extractor.
+
+FaCodec factorizes the original speech signal $\mathcal{A}$ into distinct components representing prosody, content, acoustic details, and speaker identity:
+
+$$
+\mathbf{x}^p, \mathbf{x}^c, \mathbf{x}^a, \mathbf{s} = \text{CodecEncoder}(\mathcal{A}),
+\label{eq:tokenizer}
+$$
+
+where $\mathbf{x}^p \in [v]^{mL}$, $\mathbf{x}^c \in [v]^{nL}$, and $\mathbf{x}^a \in [v]^{kL}$ denote the discrete token sequences for prosody, content, and acoustic details, respectively, and $\mathbf{s} \in \mathbb{R}^{D_{\text{spk}}}$ is the embedding of the speaker.
+
+Here, $m$, $n$, and $k$ represent the number of quantizers used for each attribute, $L$ denotes the temporal length of the sequences, and $v$ is the vocabulary size.
+
+### Phoneme-Content Mapper
+
+The *Phoneme-Content Mapper* (PCM) aligns and transforms the phonemes derived from the text prompt into the corresponding content tokens generated by the speech tokenizer, along with the corresponding embeddings of the content.
+
+Given a transcript text, we first use an open-source grapheme-to-phoneme converter\footnote{\url{https://github.com/Kyubyong/g2p/tree/master}} to obtain the textual phoneme sequence $\mathbf{P} = (\mathbf{P}_1, \mathbf{P}_2, \dots, \mathbf{P}_N)$ with $N$ phoneme tokens.
+
+A phoneme encoder then processes $\mathbf{P}$ into a sequence of $N$ phoneme embeddings $\mathbf{p} = (\mathbf{p}_1, \mathbf{p}_2, \dots, \mathbf{p}_N) \in \mathbb{R}^{N \times D'}$. 
+
+To align phonemes with discrete content speech tokens, we employ a Duration Predictor that estimates the duration $\mathbf{d} = (\mathbf{d}_1, \mathbf{d}_2, \dots, \mathbf{d}_N)$ (i.e., the number of aligned speech tokens) for each phoneme.
+
+This produces an integer-based alignment that maps each phoneme to a variable-length span in the speech-token sequence.
+
+These alignments are used by a Length Regulator to upsample the phoneme embeddings, matching the length of the discrete content token sequence: 
+$$\mathbf{p}_{\text{up}} = (\underbrace{\mathbf{p}_1,..., \mathbf{p}_1}_{\mathbf{d}_1\ \text{times}}, \underbrace{\mathbf{p}_2,..., \mathbf{p}_2}_{\mathbf{d}_2\ \text{times}},..., \underbrace{\mathbf{p}_N,..., \mathbf{p}_N}_{\mathbf{d}_N\ \text{times}}
+) \in \mathbb{R}^{L \times D'}$$. 
+
+The upsampled sequence is then fed into a Content Predictor, consisting of several Feed-Forward Transformer (FFT) layers.
+
+These layers extract $n$ contextual representations in a hierarchical manner, with each layer modeling dependencies conditioned on the preceding ones.
+
+The resulting hidden states $\mathbf{h} \in \mathbb{R}^{n \times L \times D'}$ are processed by two branches: a projection layer $\mathcal{H}{\varrho}(\cdot)$ that outputs content embeddings and a content head $\mathcal{G}{\varphi}(\cdot)$ that produces logits to predict discrete content tokens:
+
+$$
+
+\begin{split}
+\mathbf{h}_c &= \mathcal{H}_{\varrho}(\mathbf{h}) \in \mathbb{R}^{n \times L \times D}, \\
+p(\mathbf{x}^c | \mathbf{h}; \varphi) &= \mathcal{G}_{\varphi}(\mathbf{h}) \in \mathbb{R}^{n \times L \times v},
+\end{split}
+
+\label{eq:h_c}
+$$
+
+where $v$ is the vocabulary size for the discrete content tokens, and $D$ is the hidden dimension of the content embeddings.
+
+### Factorized Discrete Flow Denoiser
+
+The *Factorized Discrete Flow Denoiser (FDFD)* aims to generate the prosody and acoustic sequences of the target speech by leveraging Discrete Flow Matching and in-context learning, conditioned on a set of contextual inputs.
+
+In the following, we detail the key elements of this module.
+
+#### Contextual Modeling.
+
+We now elaborate on the construction of the conditioning context $\mathbf{c}$ introduced in Eq.~\eqref{eq:u_t_denoiser} and describe how it is integrated into our framework.
+
+Given a reference speech prompt $\mathbf{r}$, we decompose it as shown in Eq.~\eqref{eq:tokenizer} into a prosody token sequence $\mathbf{r}^p \in [v]^{mL_p}$, an acoustic token sequence $\mathbf{r}^a \in [v]^{kL_p}$, and a speaker embedding $\mathbf{s} \in \mathbb{R}^{D_{\text{spk}}}$, where $L_p$ denotes the temporal length of the reference prompt, and $D_{\text{spk}}$ is the hidden dimension of the speaker embedding.
+
+Likewise, the current denoising input $\mathbf{x}_t \in [v]^{(m+k)L}$ is split into prosody tokens $\mathbf{x}_t^p \in [v]^{mL}$ and acoustic tokens $\mathbf{x}_t^a \in [v]^{kL}$.
+
+We then use prosody and acoustic embedders, denoted $\mathcal{E}_{p}(\cdot)$ and $\mathcal{E}_a(\cdot)$, to convert these sequences into hidden representations:
+
+$$
+
+\begin{split}
+\mathbf{e}^p_r &= \mathcal{E}_p(\mathbf{r}^p) \in \mathbb{R}^{m \times L_p \times D}, \quad
+\mathbf{e}^p_t = \mathcal{E}_p(\mathbf{x}^p_t) \in \mathbb{R}^{m \times L \times D}, \\
+\mathbf{e}^a_r &= \mathcal{E}_a(\mathbf{r}^a) \in \mathbb{R}^{k \times L_p \times D}, \quad
+\mathbf{e}^a_t = \mathcal{E}_a(\mathbf{x}^a_t) \in \mathbb{R}^{k \times L \times D}.
+\end{split}
+
+$$
+
+To enrich the modeling of prosody and acoustic information, we further incorporate the embedding of content $\mathbf{h}_c$ obtained from Eq~\eqref{eq:h_c} and the embedding of speakers $\mathbf{s}$ extracted from the reference speech prompt described above.
+
+Specifically, for each attribute, the reference embedding $\mathbf{e}^i_r$ is concatenated with its corresponding corrupted embedding $\mathbf{e}^i_t$, where $i \in \{p, c, a\}$ denotes prosody, content, and acoustic details, respectively.
+
+For the corrupted content embedding $\mathbf{e}^c_t$, we directly use the content representation: $\mathbf{e}^c_t = \mathbf{h}_c \in \mathbb{R}^{n \times L \times D}$.
+
+Since content information is not required for the reference branch, we set $\mathbf{e}^c_r$ to a zero-valued placeholder $\mathbf{h}_{\text{zeros}} \in \mathbb{R}^{n \times L_p \times D}$ to maintain consistency in the number of quantizer streams.
+
+The final concatenated embeddings for each attribute type are defined as:
+
+$$
+
+\begin{split}
+\mathbf{e}_p &= \mathbf{e}^p_r \oplus \mathbf{e}^p_t \in \mathbb{R}^{m \times (L_p + L) \times D}, \\
+\mathbf{e}_c &= \mathbf{e}^c_r \oplus \mathbf{e}^c_t \in \mathbb{R}^{n \times (L_p + L) \times D},\\
+\mathbf{e}_a &= \mathbf{e}^a_r \oplus \mathbf{e}^a_t \in \mathbb{R}^{k \times (L_p + L) \times D}.
+\end{split}
+
+$$
+
+To help the model distinguish among attribute types, we introduce learnable attribute-type embeddings: $\mathbf{g}_p$, $\mathbf{g}_c$, and $\mathbf{g}_a$, each in $\mathbb{R}^{1 \times 1 \times D}$, corresponding to prosody, content, and acoustic details attributes, respectively.
+
+These are broadcast and added to their respective embeddings to inject attribute-type awareness.
+
+The resulting embeddings are then concatenated along the temporal dimension as follows:
+
+$$
+\mathbf{e} =  \left[(\mathbf{e}_p + \mathbf{g}_p)\oplus (\mathbf{e}_c + \mathbf{g}_c) \oplus (\mathbf{e}_a + \mathbf{g}_a)\right],
+$$
+
+where $\mathbf{e} \in \mathbb{R}^{(m + n + k) \times (L_p + L) \times D}$.
+
+We reshape the combined embedding $\mathbf{e}$ by permuting its axes to flatten the dimension of the quantizer, resulting in a tensor of shape $\mathbb{R}^{(L_p + L) \times (m + n + k)D}$.
+
+This reshaped embedding is then projected into the hidden dimension of the model $D$ using a learable projection layer $\mathcal{G}_{\xi}(\cdot)$:
+
+$$
+\mathbf{z} = \mathcal{G}_{\xi}(**Permute**(\mathbf{e})) \in \mathbb{R}^{(L_p + L) \times D}.
+$$
+
+The resulting sequence is passed through a neural network $f_\psi: \mathbb{R}^{(L_p + L) \times D} \to \mathbb{R}^{(L_p + L) \times (m + k)D}$, implemented with Diffusion Transformer (DiT) blocks [^Peebles2023Scalable].
+
+In parallel, the timestep $\mathbf{t}$ is embedded into $\mathbb{R}^D$ and added to the speaker embedding $\mathbf{s}$, which is also projected into $\mathbb{R}^D$, to form a global conditioning vector.
+
+This vector is fed into a multilayer perceptron (MLP), which outputs scaling and shifting parameters used for feature-wise affine modulation, enabling speaker-aware adaptation.
+
+After residual addition, the final transformation is applied, comprising layer normalization followed by feature-wise affine modulation conditioned on the global conditioning vector, and a linear projection to $(m + k)D$.
+
+We then discard the reference portion and permute the result to yield the final hidden representation:
+
+$$
+\mathbf{h}_{p,a} = **Permute**(**Discard**(f_\psi(\mathbf{z}))) \in \mathbb{R}^{(m + k) \times L \times D}.
+\label{eq:h_pa}
+$$
+
+#### Factorized Flow Prediction.
+
+Inspired by the Multi-head Attention mechanism [^Vaswani2017Attention], which enables the model to jointly attend to information from different representation subspaces, we propose a factorized flow prediction mechanism based on multi-head prediction.
+
+In this design, FDFD simultaneously models multiple aspects of speech, specifically prosody and acoustic details.
+
+Formally, we define two parallel heads: the *prosody head* $f_{\phi}(\cdot)$ and the *acoustic head* $f_{\omega}(\cdot)$, which independently predict probability distributions corresponding to prosody and acoustic attributes.
+
+We begin by slicing the representation $\mathbf{h}_{p,a}$ obtained from Eq~\eqref{eq:h_pa} into two parts: the prosody representation $\mathbf{h}_p \in \mathbb{R}^{m \times L \times D}$ and the acoustic representation $\mathbf{h}_a \in \mathbb{R}^{k \times L \times D}$.
+
+Each component is processed by its respective head, $f_\phi(\cdot)$ and $f_\omega(\cdot)$, producing logits of the shapes $\mathbb{R}^{m \times L \times v}$ and $\mathbb{R}^{k \times L \times v}$, respectively.
+
+These logits correspond to the categorical distributions predicted over the discrete token vocabulary for each aspect.
+
+Finally, the two outputs are concatenated along the dimension of the quantizer, producing a unified tensor of shape $\mathbb{R}^{(m+k) \times L \times v}$.
+
+This tensor serves as the estimated posterior distribution over $\mathbf{x}_1$, as defined in Eq.~\eqref{eq:p1|t}.
+
+#### Overall Factorized Discrete Flow Denoiser.
+
+We define the overall model $f_{\theta}$ as a composition of three main components: a *neural network* $f_{\psi}$, a *prosody head* $f_{\phi}$, and an *acoustic head* $f_{\omega}$.
+
+Formally, the model can be expressed as $f_{\theta} = (f_{\phi} \oplus f_{\omega}) \circ f_{\psi}$, where $\circ$ denotes composition.
+
+### Training Objectives
+
+The overall training objective consists of three loss components corresponding to different modules in our framework.
+
+First, we optimize the *Duration Predictor* using a loss of the Mean Squared Error (MSE) on a logarithmic scale, denoted as $\mathcal{L}_{dur}$, which compares the predicted and ground-truth durations.
+
+Second, for the *Content Predictor* defined in Eq.~\eqref{eq:h_c}, we use a cross-entropy loss $\mathcal{L}_c$ between the predicted logits and the discrete content tokens obtained from the ground truth.
+
+Third, for the *Factorized Discrete Flow Denoiser* module, we learn a probabilistic denoiser $p_{1|t}$ trained to recover masked tokens under varying masking ratios.
+
+The objective is to minimize the cross-entropy loss:
+$$
+\mathcal{L}_{FDFD}(\theta) = -\sum_{i \in \mathcal{T}}\mathbb{E}_{t \sim \mathcal{U}[0,1],(\mathbf{x}_0,\mathbf{x_1}),\mathbf{x}_t}\log p_{1|t}(\mathbf{x}_1^i|\mathbf{x}_t, \mathbf{c}; \theta), 
+$$
+where $\mathcal{T} = [(m+k)L]$, $\mathbf{x}_t \sim p_t(\mathbf{x}|\mathbf{x}_0, \mathbf{x}_1), \mathbf{x}_0 \sim p$, and $\mathbf{x}_1 \sim q$.
+
+Finally, the total loss is expressed as:
+
+$$
+\mathcal{L} = \lambda_{dur} \mathcal{L}_{dur} + \lambda_c \mathcal{L}_c + \lambda_{FDFD} \mathcal{L}_{FDFD},
+\label{eq:total_loss}
+$$
+
+where $\lambda_{dur}$, $\lambda_c$, and $\lambda_{FDFD}$ are hyperparameters that control the relative importance of each loss term.
