--- a/Models/FlowMatching/2025.09.11_DiFlow-TTS.md
+++ b/Models/FlowMatching/2025.09.11_DiFlow-TTS.md
@@ -522,3 +522,19 @@ At 8 NFE, DiFlow-TTS is only slower than the 1 NFE setting in OZSpeech, yet it a
 At this setting, DiFlow-TTS delivers sufficiently strong performance in speech naturalness, intelligibility, and pronunciation accuracy, even if it does not outperform all baselines, as reported in Table~[tab:latency-results](#tab:latency-results).
 
 These results demonstrate its effective trade-off between quality and efficiency.
+
+## 5·Conclusion
+
+In this work, we introduced DiFlow-TTS, a novel zero-shot text-to-speech system that leverages purely discrete flow matching with factorized speech token modeling.
+
+By explicitly disentangling prosody and acoustic details and predicting them through distinct heads within a unified non-autoregressive framework, DiFlow-TTS achieves strong performance across naturalness, speaker similarity, prosody accuracy, and synthesis speed.
+
+Our design effectively integrates in-context learning and content conditioning via a lightweight architecture, offering a favorable trade-off between quality and latency.
+
+Experimental results demonstrate that DiFlow-TTS outperforms several strong baselines despite being trained on a significantly smaller dataset.
+
+Future work includes enabling multilingual and emotional synthesis and integrating visual lip cues for dubbing to DiFlow-TTS.
+
+\bibliography{aaai2026}
+
+\end{document}
